# FluxGate

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
benchmark-results/reference/: REPORT.md  wrk-c200-60s.txt  wrk-c500-300s.txt
cmake/: CompilerWarnings.cmake
config/: fluxgate.conf
deploy/: fluxgate.logrotate  fluxgate.service
docs/: ARCHITECTURE.md  BENCHMARK.md  CODE_GUIDE.md  REWRITE_NOTES.md  VALIDATION.md
include/fluxgate/: Backend.h  BackendPool.h  ByteBuffer.h  Config.h  HealthChecker.h  Logger.h  Metrics.h  Net.h  NonCopyable.h  ProxySession.h  UniqueFd.h  Worker.h
src/: Backend.cpp  BackendPool.cpp  Config.cpp  HealthChecker.cpp  Logger.cpp  Metrics.cpp  Net.cpp  ProxySession.cpp  Worker.cpp  main.cpp
tests/: fluxgate_tests.cpp  test.conf
tools/: async_upstream.py  benchmark.sh  demo_upstream.py  smoke_test.sh  stress_test.sh
